Fix toggle button  => collapse-section => item-page-d

--- a/src/styles/elements/_item-page-d.scss
+++ b/src/styles/elements/_item-page-d.scss
@@ -126,11 +126,6 @@
     }
 
     .collapse-section {
-        &.is-expanded {
-            &:after {
-                display: none;
-            }
-        }
 
         &__body {
             // max-height: 0;
